# duckdb-custom-dlopen

./: CMakeLists.txt  Makefile
pmload/: CMakeLists.txt  pmload.cpp
pmload/include/: pmload.hpp
src/: parallel_python_extension.cpp
src/include/: parallel_python_extension.hpp
test/sql/: parallel_python.test
